--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/marinaERP/style.scss
@@ -1,6 +1,3 @@
-body {
-  // border: 1px solid grey;
-}
 
 // ERP
 .title {
@@ -79,11 +76,10 @@ body {
     margin: 2em;
     box-shadow: 2px 10px 30px rgba(51, 37, 85, 0.4);
 
-    &__button {
-
-      cursor: pointer;
+    &__addToCardBtn {
       position: relative;
       transition-duration: 0.4s;
+      cursor: pointer;
       padding: 0em 1em;
       border-radius: 8px;
       font-size: 1em;
@@ -93,7 +89,20 @@ body {
       color: rgba(255, 255, 255, 0.349);
       box-shadow: 2px 10px 30px rgba(51, 37, 85, 0.4);
       margin-bottom: 1em; 
+
+      
     }
+
+    &__addToCardBtn:hover {
+      transition-duration: 0.1s;
+      background-color: #3a3a3a;
+    }
+
+    &__addToCardBtn:active {
+      top: 1.5px;
+    }
+
+    
 
     img {
       height: 20em;
