--- a/תרגול/08.02.22/noa/style.scss
+++ b/תרגול/08.02.22/noa/style.scss
@@ -1,22 +1,22 @@
 form {
     display: flex;
     flex-direction: column;
-    width:400px;
+    width: 500px;
     // background-color: aqua;
     margin: 10%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 
     p {
-        font-weight:bold;
+        font-weight: bold;
         margin: 7px;
     }
 
     input {
         border: none;
         box-shadow: 1px 0.5px 2px rgba(0, 0, 0, 0.507);
-        // border-bottom: 1px solid black;
+        border-bottom: 1.5px solid black;
         margin: 7px;
-        width:96%;
+        width: 96%;
         border-radius: 3px;
 
         &[type="radio"] {
@@ -27,14 +27,21 @@ form {
             background-color: orange;
             border-radius: 5px;
             border-color: rgb(243, 243, 180);
-            border-width: 10px;
+            border-width: 1px;
+        }
+
+        &[type="checkbox"] {
+            box-shadow: none;
+           margin-right: 0px;
+           margin-left: 25px;
+           width: 40%;
         }
 
     }
 
     .name {
         display: flex;
-        
+
     }
 
     .radio {
@@ -50,12 +57,30 @@ form {
         }
     }
 
-    .clear{
+    .clear {
         box-shadow: 1px 0.5px 2px rgba(0, 0, 0, 0.678);
         width: 40%;
         align-self: center;
-        background-color: rgb(49, 49, 194);  
+        background-color: rgb(49, 49, 194);
         border-radius: 5px;
         margin: 5px;
+        color: whitesmoke;
+    }
+
+    .checkbox {
+
+        display: grid;
+        grid-template-columns: 10% 90%;
+        margin: 5px;
+        display: none;
+
+        .tax {
+            display: none;
+            // grid-column: 1/3;
+            // display: flex;
+            // margin-left: 20px;
+            // margin-top: 10px;
+
+        }
     }
 }
