--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -743,3 +743,15 @@
         }
     }
 }
+
+
+
+
+///////////////////////// ERP //////////////////////////////////////
+.dishesERP{
+    border: 1px solid black;
+    width: 50%;
+    padding:5px;
+}
+
+    
