--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -38,10 +38,19 @@ body {
         
       }
     }
+    &:hover{
+      background-color: #141010de;
+    }
   }
+
+  
 
   &__navBar2 {
     text-align: center;
+    transition: all 0.5s;
+    &:hover{
+      background-color: #141010de;
+    }
 
 
 
@@ -53,6 +62,8 @@ body {
     ul {
       display: inline-flex;
       list-style: none;
+
+      
 
 
 
@@ -82,6 +93,7 @@ body {
       width: 130vh;
       padding: 20px;
       opacity: 0.4;
+      
 
 
 
@@ -185,6 +197,7 @@ body {
   position: absolute;
  
   transform: translateY(-20px);;
+  
 }
 
 .sub-container{
