--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -1,29 +1,15 @@
-* {
-    box-sizing: border-box;
-    font-family: 'Arimo', sans-serif;
-}
-
 .main {
-    // max-width: 300px;
-    height: 1000px;
+    max-width: 300px;
+    height: 700px;
     // border: 3px solid black;
     margin: auto;
     background-image:
         linear-gradient(90deg, rgb(70, 74, 75), rgba(160, 167, 166, 0)),
-        repeating-linear-gradient(-45deg, #1b4677, #1b7557 1.5px, #456bb3 2px, #422dbd 4px);
-       
-        &-header{
-            text-decoration: underline;
-            font-size: 20vh;
-            color:sienna;
-            text-align: center;
-            font-family:sans-serif;
-            font-family: 'Arimo', sans-serif;
-        }
+        repeating-linear-gradient(-45deg, #57779b, #1b7557 1.5px, #456bb3 2px, #422dbd 4px);
 
     &_form {
-        height: 700px;
-        // max-width: 300px;
+        height: 300px;
+        max-width: 300px;
         // border: 3px solid red;
         display: grid;
         grid-template-columns: repeat(3, 33%);
@@ -39,29 +25,27 @@
             &-Btn {
                 box-shadow: rgba(38, 168, 21, 0.55) 0px 30px 60px -12px inset, rgba(119, 85, 33, 1.5) 0px 18px 36px -30px inset;
                 grid-column: 2/3;
-                color: brown;
                 width: 45%;
                 border-radius: 40px;
                 font-weight: 1000;
-                font-size: 7vh;
-                cursor: pointer;
+                font-size: 15px;
             }
         }
 
         &-selectCatagory {
+            font-size: 15px;
             font-weight: bold;
-            box-shadow: rgba(153, 135, 102, 0.85) 0px 30px 60px -12px inset, rgba(77, 76, 74, 0.5) 0px 18px 36px -30px inset;
-            height: 10vh;
+            box-shadow: rgba(102, 122, 153, 0.85) 0px 30px 60px -12px inset, rgba(77, 76, 74, 0.5) 0px 18px 36px -30px inset;
+            height: 4vh;
             text-align: center;
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
             width: 100%;
-            background: burlywood;
+            background: rgb(8, 95, 55);
+            color: rgb(241, 234, 234);
             grid-column: 1/4;
             font-weight: bold;
-            cursor: pointer;
-            font-size: 7vh;
 
             &-options {
                 font-size: 15px;
@@ -85,11 +69,7 @@
 
             &-btn {
                 width: 33%;
-                box-shadow: rgba(218, 88, 88, 0.75) 0px 30px 60px -12px inset, rgba(183, 96, 199, 0.8) 0px 18px 36px -10px inset;
-                font-size: 5vh;
-                cursor: pointer;
-    
-
+                box-shadow: rgba(68, 66, 68, 0.75) 0px 30px 60px -12px inset, rgba(183, 96, 199, 0.8) 0px 18px 36px -10px inset;
             }
         }
 
@@ -114,10 +94,8 @@
         &-filter-btn {
             width: 40%;
             height: 33%;
-            box-shadow: rgba(68, 67, 66, 0.75) 0px 30px 60px -12px inset, rgba(24, 102, 107, 0.8) 0px 18px 36px -10px inset;
-        font-size: 5vh;
+            box-shadow: rgba(68, 66, 68, 0.75) 0px 30px 60px -12px inset, rgba(24, 102, 107, 0.8) 0px 18px 36px -10px inset;
         }
-
 
         &-filterInputs {
             box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
@@ -130,21 +108,6 @@
             }
         }
 
-<<<<<<< HEAD
-        &-filterInputsCustomer {
-            box-shadow: rgba(6, 61, 97, 0.85) 0px 30px 60px -12px inset, rgba(16, 63, 85, 0.5) 0px 18px 36px -30px inset;
-            height: 70%;
-            margin-left: 25px;
-            margin-top: -20px;
-            color: aliceblue;
-
-            &::placeholder {
-                color: aliceblue;
-            }
-
-        }
-=======
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
     }
 
     &_displayLists {
@@ -173,17 +136,16 @@
         &-box {
             height: 100%;
             width: 100%;
-            border-bottom: 10px solid(0, 0, 0);
+            // border-bottom: 1px solid rgb(0, 0, 0);
             display: flex;
             flex-direction: row;
             column-gap: 3px;
-            overflow-x: auto;
+            overflow: auto;
             white-space: nowrap;
-
 
             &-card {
                 height: 100%;
-                background-color: rgb(15, 8, 8);
+                background-color: rgb(15, 14, 14);
                 width: 50%;
                 row-gap: 5px;
                 text-align: center;
@@ -209,7 +171,6 @@
                     margin-top: 10px;
                     font-size: 12px;
                     color: rgb(255, 255, 255);
-                font-size: 3vh;
                 }
             }
         }
@@ -219,8 +180,6 @@
         height: 33%;
         background-color: rgb(82, 59, 85);
         color: rgb(255, 255, 255);
-        font-size: 4vh;
-        text-align: center;
 
         &::placeholder {
             color: rgb(255, 250, 250);
@@ -238,8 +197,7 @@
 
 .container {
     max-width: 740px;
-    height: 900px;
-    // border: 3px solid red;
+    height: 1800px;
     margin: auto;
     background: linear-gradient(rgb(157, 241, 157),
             transparent),
@@ -251,15 +209,8 @@
             transparent);
     background-blend-mode: screen;
 
-
-    // background-color: rgb(46, 127, 141);
-
     &_header {
-<<<<<<< HEAD
-        // background-color: rgb(46, 127, 141);
-=======
         // background-color:rgb(46 , 127 , 141);
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(5, 1fr);
@@ -283,11 +234,7 @@
         &-search {
             height: 10vh;
             grid-row: 1/4;
-<<<<<<< HEAD
-            grid-column: 2/8;
-=======
             grid-column: 3/7;
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
             justify-content: center;
             margin-top: 1vh;
 
@@ -297,23 +244,13 @@
                 align-self: center;
                 background-color: blanchedalmond;
                 border-radius: 10px;
-<<<<<<< HEAD
-
-=======
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
             }
         }
 
         &_menu {
-<<<<<<< HEAD
-            grid-column: 8/13;
-            height: 10vh;
-            grid-row: 1/4;
-=======
             grid-column: 7/13;
             height: 8vh;
             grid-row: 1;
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
             display: flex;
             column-gap: 1rem;
 
@@ -324,54 +261,70 @@
                 width: 25%;
                 border: none;
 
-<<<<<<< HEAD
-
-=======
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
                 & p {
                     font-size: 12px;
                 }
             }
         }
-<<<<<<< HEAD
-    }
-
-    &-imgsBox {
-        background-image: url(https://s18670.pcdn.co/wp-content/uploads/Top-20-Teacher-T-Shirts-on-Etsy.png);
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
-        margin: auto;
-        width: 100%;
-        height: 35%;
-        margin-top: 10px;
-    }
-
-=======
 
         &-dropDown {
             grid-column: 7/13;
             grid-row: 2;
-            border: 3px solid red;
             height: 20vh;
             display: grid;
             grid-template-columns: repeat(4, 25%);
 
             &-box {
-                border: 2px solid black;
-
+                display: flex;
+                flex-direction: column;
+                
                 &-item {
                     width: 100%;
                     height: 35%;
                     border-bottom: 1px solid rgb(86, 86, 224);
                     background-color: rgb(212, 211, 201);
                 }
-
                 &-signInInput {
                     box-shadow: rgba(97, 88, 6, 0.85) 0px 30px 60px -12px inset, rgba(85, 216, 96, 0.5) 0px 18px 36px -30px inset;
-                    height: 20%;
-                    width: 100%;
+                    border-radius: 5px;
+                    height: 15%;
+                    width: 95%;
+
+                    &::placeholder{
+                        color: black;
+                        font-weight: 400;
+                        font-size: 14px;
+                    }
+
+                    &-btn{
+                        color: #34333b;
+                        background-color: rgb(168, 91, 187);
+                        box-shadow: none;
+                        width: 95%;
+                        border-radius: 5px;
+
+                    }
                 }
+            }
+            .notifications{
+                grid-column: 1/2;
+                width: 150%;
+                border-radius: 15px;
+                opacity: 0.7;
+            }
+            .signIn{
+                grid-column: 2/3;
+                row-gap: 5px;
+            }
+            .yourOrders{
+                grid-column: 3/4;
+            }
+            .shoppingCart{
+                grid-column: 4/5;
+                display: flex;
+                flex-direction: column;
+                overflow-y: auto;
+                white-space: nowrap;
             }
         }
     }
@@ -386,8 +339,6 @@
         height: 35%;
         margin-top: 10px;
     }
-
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
     &_catagories {
         display: flex;
         justify-content: space-around;
@@ -404,33 +355,6 @@
             background-size: contain;
             background-repeat: no-repeat;
 
-<<<<<<< HEAD
-            &:hover {
-                transform: scale(1.2);
-            }
-        }
-
-        &-display {
-            width: 100%;
-            height: 25%;
-            margin-top: 5px;
-            border: 1px solid rgb(197, 187, 187);
-            display: flex;
-            flex-direction: column;
-            column-gap: 5px;
-            overflow-y: auto;
-            white-space: nowrap;
-
-            &-card {
-                border-bottom: 5px solid rgb(0, 0, 0);
-                box-sizing: content-box;
-                box-shadow: rgba(110, 111, 112, 0.55) 0px 30px 60px 80px inset, rgba(12, 24, 94, 0.75) 0px 18px 36px 30px inset;
-                height: 100%;
-                width: 100%;
-                display: grid;
-                grid-template-columns: repeat(2, 50%);
-
-=======
             // &:hover {
             //     transform: scale(1.2);
             // }
@@ -440,10 +364,9 @@
 
             }
         }
-
         &-display {
             width: 100%;
-            height: 25%;
+            height: 20%;
             margin-top: 5px;
             border: 1px solid rgb(197, 187, 187);
             display: flex;
@@ -461,23 +384,16 @@
                 display: grid;
                 grid-template-columns: repeat(2, 50%);
 
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
+                &-btn{
+                    width: 50%;
+                    box-shadow: rgba(92, 92, 184, 0.25) 0px 30px 60px -12px inset, rgba(49, 141, 46, 0.8) 0px 18px 36px -18px inset;
+                }
+
                 &-details {
                     height: 100%;
                     grid-column: 1/2;
                     text-align: center;
                 }
-<<<<<<< HEAD
-
-                &-img {
-                    height: 100%;
-                    grid-column: 2/3;
-                    border-left: 1px dotted black;
-                    background-position: center;
-                    background-size: contain;
-                    background-repeat: no-repeat;
-=======
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
 
                 &-img {
                     height: 100%;
@@ -488,10 +404,7 @@
                     background-repeat: no-repeat;
 
 
-<<<<<<< HEAD
-=======
 
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
                 }
             }
         }
@@ -507,6 +420,8 @@
         .pants {
             background-image: url("https://media.istockphoto.com/vectors/set-of-trousers-for-business-man-vector-id818252146?k=20&m=818252146&s=612x612&w=0&h=zA3CDwVXCfKAgIZ1FxkyfvGLRgKX_aentNe9AwmNDJw=");
         }
+
+
     }
 
     &_sortANDfilterBtns {
@@ -521,8 +436,6 @@
             height: 80%;
             width: 30%;
             margin: auto;
-<<<<<<< HEAD
-=======
 
             &_form {
                 width: 100%;
@@ -548,11 +461,10 @@
                     color: rgb(255, 255, 255);
                     font-weight: 1000;
                     box-shadow: rgba(33, 13, 87, 0.75) 0px 54px 55px, rgba(32, 161, 101, 0.72) 0px -12px 30px,
-                    rgba(53, 100, 187, 0.82) 0px 4px 6px, rgba(101, 42, 136, 0.77) 0px 12px 13px, rgba(52, 88, 136, 0.99) 0px -3px 5px;
+                        rgba(53, 100, 187, 0.82) 0px 4px 6px, rgba(101, 42, 136, 0.77) 0px 12px 13px, rgba(52, 88, 136, 0.99) 0px -3px 5px;
                     background-color: rgb(107, 68, 46);
                 }
             }
->>>>>>> 1112443108cadce6408bfdfd157b9c61846d53c6
         }
     }
 
@@ -571,10 +483,66 @@
         margin: auto;
 
         &-options {
-            font-size: 10px;
+            font-size: 12px;
             display: inline-block;
             font-family: 'Times New Roman', Times, serif;
-
         }
     }
+
+    &-shoppingCart {
+        width: 100%;
+        // border: 3px solid red;
+        height: 30vh;
+       
+
+        &_display {
+            height: 100%;
+            border: 3px solid black;
+            width: 50%;
+            display: none;
+            flex-direction: column;
+            overflow-y: scroll;
+            white-space: nowrap;
+           
+            &-item {
+                height: 35%;
+                border-bottom: 1px solid black;
+                display: grid;
+                grid-template-columns: repeat(10, 1fr);
+                grid-template-rows: repeat(10, 1fr);
+
+                &-header {
+                    font-size: 12px;
+                    text-align: center;
+                    grid-column: 1/11;
+                    grid-row: 1/3;
+                    // border: 5px solid yellow;
+                }
+
+                &-size {
+                    font-size: 10px;
+                    grid-column: 1/4;
+                    grid-row: 2/5;
+                    font-weight: 1000;
+                }
+
+                &-price {
+                    font-size: 10px;
+                    font-weight: 1000;
+                    grid-column: 1/4;
+                    grid-row: 6/8;
+                }
+
+                &-deleteBtn {
+
+                    grid-column: 8/10;
+                    grid-row: 4/7;
+                    border-radius: 15px;
+                    background-color: lightgoldenrodyellow;
+                    color: blue;
+                }
+            }
+        }
+    }
+
 }
