--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
@@ -149,13 +149,19 @@
 
     &_picture{
         display: grid;
-         
-        &-item{
-            width: 40px;
-            height: 40px;
+
+        
+        .pic{
+            grid-column: 1/5;
+            grid-row: 1/5;
         }
     }
+    
+}
 
+img{
+    width: 100%;
+    height: 25%;
 }
 h2{
     background-color: cadetblue;
