--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.scss
@@ -578,7 +578,9 @@ footer {
     display: grid;
     border: solid 2px grey;
     background: #f5f5f5;
-    box-shadow: 0 10px 20px rgba(0,0,0,.3);
+    box-shadow: 0;
+    transform: scale(0.95);
+    transition: box-shadow 0.5s, transform 0.5s;
     overflow: hidden;
     border-radius: 5px;
     padding: 25px;
